--- a/lab-python-list-comprehension.ipynb
+++ b/lab-python-list-comprehension.ipynb
@@ -71,12 +71,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "21625526-3fae-4c55-bab5-f91940070681",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Open', 'Open', 'Senior', 'Open', 'Open', 'Senior']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "def categorize_members(data):\n",
+    "    return [\"Senior\" if age >= 55 and handicap > 7 else \"Open\" for age, handicap in data]\n",
+    "\n",
+    "# Example input\n",
+    "input_data = [[18, 20], [45, 2], [61, 12], [37, 6], [21, 21], [78, 9]]\n",
+    "\n",
+    "# Get the output\n",
+    "output = categorize_members(input_data)\n",
+    "\n",
+    "# Print the output\n",
+    "print(output)  # Output: [\"Open\", \"Open\", \"Senior\", \"Open\", \"Open\", \"Senior\"]\n",
+    "\n"
    ]
   },
   {
@@ -95,12 +114,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "53061dce-7aa3-4476-8b56-71413c5e135c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "78\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "def sum_of_multiples(n):\n",
+    "    if n < 0:\n",
+    "        return 0\n",
+    "    return sum(x for x in range(n) if x % 3 == 0 or x % 5 == 0)\n",
+    "\n",
+    "# Example usage\n",
+    "print(sum_of_multiples(10))  # Output: 23\n",
+    "print(sum_of_multiples(20))  # Output: 78\n",
+    "print(sum_of_multiples(-5))  # Output: 0\n"
    ]
   },
   {
@@ -127,12 +164,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a8cb1579-7065-4fc0-bd53-f91c2ad1dad9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1]\n",
+      "[8, 6, 7, 5, 3, 0, 9]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "def digits_of_integer(num):\n",
+    "    return [int(digit) for digit in str(num)]\n",
+    "\n",
+    "# Test cases\n",
+    "print(digits_of_integer(123))     # Output: [1, 2, 3]\n",
+    "print(digits_of_integer(1))       # Output: [1]\n",
+    "print(digits_of_integer(8675309)) # Output: [8, 6, 7, 5, 3, 0, 9]\n"
    ]
   },
   {
@@ -155,12 +208,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "86ebe759-76d8-4012-8590-c48a473a6099",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1, -2, -3, -4, -5]\n",
+      "[-1, 2, -3, 4, -5]\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "def invert(numbers):\n",
+    "    return [-num for num in numbers]\n",
+    "\n",
+    "# Test cases\n",
+    "print(invert([1, 2, 3, 4, 5]))      # Output: [-1, -2, -3, -4, -5]\n",
+    "print(invert([1, -2, 3, -4, 5]))    # Output: [-1, 2, -3, 4, -5]\n",
+    "print(invert([]))                  # Output: []\n"
    ]
   },
   {
@@ -193,12 +262,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6711881b-450a-44cb-a3d0-367b2c6a4464",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100, 11: 121, 12: 144, 13: 169, 14: 196, 15: 225}\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# Using dictionary comprehension\n",
+    "squares_dict = {key: key**2 for key in range(1, 16)}\n",
+    "\n",
+    "# Print the dictionary\n",
+    "print(squares_dict)\n"
    ]
   },
   {
@@ -220,12 +301,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a1d55cea-96c3-4853-8220-17c0904a8816",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 3), (1, 4), (2, 3), (2, 4)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "def generate_pairs(list1, list2):\n",
+    "    return [(x, y) for x in list1 for y in list2]\n",
+    "\n",
+    "# Test case\n",
+    "input1 = [1, 2]\n",
+    "input2 = [3, 4]\n",
+    "output = generate_pairs(input1, input2)\n",
+    "print(output)  # Output: [(1, 3), (1, 4), (2, 3), (2, 4)]\n"
    ]
   },
   {
@@ -246,12 +342,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0175239c-87fa-4ba0-8776-d62567256db7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 1), ('a', 2), ('b', 3), ('b', 4)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "def generate_key_value_pairs(input_dict):\n",
+    "    return [(key, value) for key in input_dict for value in input_dict[key]]\n",
+    "\n",
+    "# Test case\n",
+    "input_dict = {\"a\": [1, 2], \"b\": [3, 4]}\n",
+    "output = generate_key_value_pairs(input_dict)\n",
+    "print(output)  # Output: [('a', 1), ('a', 2), ('b', 3), ('b', 4)]\n"
    ]
   },
   {
@@ -281,12 +391,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "248918d0-f082-40a8-9d5c-c7b4ffd2bfca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 3), (1, 4), (2, 3), (2, 4), (5, 7), (5, 8), (6, 7), (6, 8)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "def generate_pairs_from_tuples(list_of_tuples):\n",
+    "    return [(x, y) for tuple in list_of_tuples for x in tuple[0] for y in tuple[1]]\n",
+    "\n",
+    "# Test case\n",
+    "input_tuples = [([1, 2], [3, 4]), ([5, 6], [7, 8])]\n",
+    "output = generate_pairs_from_tuples(input_tuples)\n",
+    "print(output)  # Output: [(1, 3), (1, 4), (2, 3), (2, 4), (5, 7), (5, 8), (6, 7), (6, 8)]\n"
    ]
   },
   {
@@ -308,12 +432,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c57d9e77-6859-45dd-a2e6-2c1898f1baa2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{('c', 'a'), ('c', 'd'), ('a', 'c'), ('b', 'd'), ('d', 'c'), ('b', 'a'), ('a', 'b'), ('d', 'b'), ('a', 'a'), ('a', 'd'), ('c', 'b'), ('d', 'd'), ('c', 'c'), ('d', 'a'), ('b', 'c'), ('b', 'b')}\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "def generate_character_pairs(strings_list):\n",
+    "    return {(char1, char2) for str1 in strings_list for char1 in str1 for str2 in strings_list for char2 in str2}\n",
+    "\n",
+    "# Test case\n",
+    "input_strings = [\"ab\", \"cd\"]\n",
+    "output = generate_character_pairs(input_strings)\n",
+    "print(output)  # Output: {('a', 'b'), ('c', 'd'), ('a', 'd'), ('c', 'b')}\n"
    ]
   }
  ],
